[metadata]
name = m3u_serializer
version = attr: m3u_serializer.__version__
url = https://www.pe2mbs.nl/m3u_serializer
project_urls =
    Documentation = https://github.com/pe2mbs/m3u_serializer/wiki
    Source Code = https://github.com/pe2mbs/m3u_serializer/
    Issue Tracker = https://github.com/pe2mbs/m3u_serializer/issues/
license = GNU General Public License, version 2 (only)
author = Marc Bertens-Nguyen
author_email = m.bertens@pe2mb2.nl
maintainer = Marc Bertens-Nguyen
maintainer_email = m.bertens@pe2mb2.nl
description = M3U serializer / deserializer a lightweight to write and read M3U medie files.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Multimedia
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator

[options]
packages = find:
package_dir = = m3u_serializer
include_package_data = True
python_requires = >= 3.6
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = m3u_serializer

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[coverage:run]
branch = True
source =
    m3u_serializer
    tests

[coverage:paths]
source =
    m3u_serializer
    */site-packages

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
# ISC = implicit str concat
select = B, E, F, W, B9, ISC
ignore =
    # slice notation whitespace, invalid
    E203
    # import at top, too many circular import fixes
    E402
    # line length, handled by bugbear B950
    E501
    # bare except, handled by bugbear B001
    E722
    # bin op line break, invalid
    W503
# up to 88 allowed by bugbear B950
max-line-length = 140
per-file-ignores =
    # __init__ exports names
    m3u_serializer/__init__.py: F401

[mypy]
files = m3u_serializer
python_version = 3.6
show_error_codes = True
allow_redefinition = True
disallow_subclassing_any = True
# disallow_untyped_calls = True
# disallow_untyped_defs = True
# disallow_incomplete_defs = True
no_implicit_optional = True
local_partial_types = True
# no_implicit_reexport = True
strict_equality = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unused_ignores = True
# warn_return_any = True
# warn_unreachable = True

[mypy-requests.*]
ignore_missing_imports = True

